# tempo

./: CHANGELOG.md  README.md  alire.toml  shell.nix  tempo.gpr
docs/: justfile  tempo.1.scd
langs/ada/: INSTALL.md  alire.toml
langs/ada/src/: ring_buffer.adb  tempo.adb  tempo_tapper.adb
langs/hare/: INSTALL.md  main.ha
langs/hare/ringbuf/: +test.ha  ringbuf.ha
langs/hare/tapper/: +test.ha  tapper.ha
langs/haskell/: INSTALL.md  justfile  tempo.cabal
langs/haskell/app/: Main.hs
langs/haskell/src/: Queue.hs  Tapper.hs
langs/haskell/test/: Main.hs
langs/ocaml/: .gitignore  .ocamlformat  INSTALL.md  dune-project  tempo.ml
langs/ocaml/lib/: dune  pqueue.ml  pqueue.mli  tap.ml  tap.mli
langs/ocaml/test/: dune  test_tempo.ml
langs/rust/: Cargo.toml  INSTALL.md
langs/rust/src/: main.rs  ringbuf.rs  tap.rs  tests.rs
langs/zig/: .gitignore  INSTALL.md  build.zig
langs/zig/src/: main.zig  meta.zig  ringbuf.zig  tap.zig  tests.zig
src/: ring_buffer.adb  ring_buffer.ads  ring_buffer_core.adb  ring_buffer_core.ads  tempo.adb  tempo_sample.adb  tempo_sample.ads  tempo_tapper.adb  tempo_tapper.ads
