(lang dune 3.20)

(name tempo)

(generate_opam_files true)

(authors "Ula Shipman <ula.hello@mailbox.org>")

(license MPL-2.0)

(package
 (name tempo)
 (version 0.1.0)
 (description "terminal tempo tapper")
 (depends ocaml (alcotest :with-test)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
